add endpoint to get all pictograms
